# nao_description

./: CMakeLists.txt  README.md  nao_description.pc.cmake  package.xml  setup.py
blender/: LAnkleRoll.blender  RAnkleRoll.blender
convex/: ASUS_XTION-ch.txt  HeadPitch-ch.txt  HeadPitch_0.10-ch.txt  HeadYaw-ch.txt  HeadYaw_0.10-ch.txt  LAnklePitch-ch.txt  LAnklePitch_0.10-ch.txt  LAnkleRoll-ch.txt  LAnkleRoll_0.10-ch.txt  LElbowRoll-ch.txt  LElbowRoll_0.10-ch.txt  LFinger11-ch.txt  LFinger11_0.10-ch.txt  LFinger12-ch.txt  LFinger12_0.10-ch.txt  LFinger13-ch.txt  LFinger13_0.10-ch.txt  LFinger21-ch.txt  LFinger21_0.10-ch.txt  LFinger22-ch.txt  LFinger22_0.10-ch.txt  LFinger23-ch.txt  LFinger23_0.10-ch.txt  LHipPitch-ch.txt  LHipPitch_0.10-ch.txt  LHipRoll-ch.txt  LHipRoll_0.10-ch.txt  LHipYawPitch-ch.txt  LHipYawPitch_0.10-ch.txt  LKneePitch-ch.txt  LKneePitch_0.10-ch.txt  LShoulderPitch-ch.txt  LShoulderPitch_0.10-ch.txt  LShoulderRoll-ch.txt  LShoulderRoll_0.10-ch.txt  LThumb1-ch.txt  LThumb1_0.10-ch.txt  LThumb2-ch.txt  LThumb2_0.10-ch.txt  LWristYaw-ch.txt  (+39 more)
launch/: display.launch  display_half_sitting.launch  display_sch.launch
meshes/V40/: ASUS_XTION.dae  HeadPitch.dae  HeadYaw.dae  LAnklePitch.dae  LAnkleRoll.dae  LElbowRoll.dae  LFinger11.dae  LFinger12.dae  LFinger13.dae  LFinger21.dae  LFinger22.dae  LFinger23.dae  LHipPitch.dae  LHipRoll.dae  LHipYawPitch.dae  LKneePitch.dae  LShoulderPitch.dae  LShoulderRoll.dae  LThumb1.dae  LThumb2.dae  LWristYaw.dae  RAnklePitch.dae  RAnkleRoll.dae  RElbowRoll.dae  RFinger11.dae  RFinger12.dae  RFinger13.dae  RFinger21.dae  RFinger22.dae  RFinger23.dae  RHipPitch.dae  RHipRoll.dae  RHipYawPitch.dae  RKneePitch.dae  RShoulderPitch.dae  RShoulderRoll.dae  RThumb1.dae  RThumb2.dae  RWristYaw.dae  Torso.dae
rsdf/: base_link.rsdf  l_ankle.rsdf  r_ankle.rsdf
urdf/: nao.urdf
