<package>
  <name>nao_description</name>
  <version>0.1.0</version>
  <description>This package provides URDF, SRDF models for the NAO robot.</description>
  <maintainer email="arnaud.tanguy@lirmm.fr">Arnaud TANGUY</maintainer>

  <license>Not distributed</license>

  <url type="website">None</url>
  <!-- <url type="bugtracker"></url> -->

  <author email="arnaud.tanguy@lirmm.fr">Arnaud TANGUY</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

<export>
    <rosdoc config="rosdoc.yaml"/>
</export>

</package>
